--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -155,7 +155,7 @@
   "新型コロナウイルス感染症": "新型コロナウイルス感染症",
   "menu/新型コロナウイルス感染症": "新型コロナウイルス感染症",
   "対策サイト": "対策サイト",
-  "menu/対策サイト": "対策サイト",
+  "menu/対策サイト": "対策サイト（非公式）",
   "最終更新": "最終更新",
   "注釈": "This is a provisional translation. Please be aware that there may be mistranslations.",
   "print": "印刷",
@@ -259,7 +259,7 @@
   "2次元コード": "2次元コード",
   "※最新の情報はWebページをご覧ください": "※最新の情報はWebページをご覧ください",
   "〇": "〇",
-  
+
   "https://marketingplatform.google.com/about/analytics/terms/jp/": "https://marketingplatform.google.com/about/analytics/terms/jp/",
   "https://policies.google.com/privacy?hl=ja": "https://policies.google.com/privacy?hl=ja",
   "https://support.google.com/analytics/answer/6004245?hl=ja": "https://support.google.com/analytics/answer/6004245?hl=ja",
