--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -443,5 +443,6 @@
   "相談する医療機関に迷う場合や「かかりつけ医」がない場合「受診・相談センター」": "相談する医療機関に迷う場合や「かかりつけ医」がない場合「受診・相談センター」",
   "または、かかりつけ医の紹介先で受診・検査となります": "または、かかりつけ医の紹介先で受診・検査となります",
   "かかりつけ医にて受診・検査をおこないます（診療・検査医療機関の場合）": "かかりつけ医にて受診・検査をおこないます（診療・検査医療機関の場合）",
-  "入院と宿泊療養の患者数": "入院と宿泊療養の患者数"
+  "入院と宿泊療養の患者数": "入院と宿泊療養の患者数",
+  "個別事例の症状などは公表されないので、重症などは公表された場合は更新": "個別事例の症状などは公表されないので、重症などは公表された場合は更新"
 }
