--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -444,5 +444,6 @@
   "または、かかりつけ医の紹介先で受診・検査となります": "または、かかりつけ医の紹介先で受診・検査となります",
   "かかりつけ医にて受診・検査をおこないます（診療・検査医療機関の場合）": "かかりつけ医にて受診・検査をおこないます（診療・検査医療機関の場合）",
   "入院と宿泊療養の患者数": "入院と宿泊療養の患者数",
-  "個別事例の症状などは公表されないので、重症などは公表された場合は更新": "個別事例の症状などは公表されないので、重症などは公表された場合は更新"
+  "個別事例の症状などは公表されないので、重症などは公表された場合は更新": "個別事例の症状などは公表されないので、重症などは公表された場合は更新",
+  "個別事例の症状は公表されないので、重症などは公表された場合は更新": "個別事例の症状は公表されないので、重症などは公表された場合は更新"
 }
