--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -445,5 +445,8 @@
   "かかりつけ医にて受診・検査をおこないます（診療・検査医療機関の場合）": "かかりつけ医にて受診・検査をおこないます（診療・検査医療機関の場合）",
   "入院と宿泊療養の患者数": "入院と宿泊療養の患者数",
   "個別事例の症状などは公表されないので、重症などは公表された場合は更新": "個別事例の症状などは公表されないので、重症などは公表された場合は更新",
-  "個別事例の症状は公表されないので、重症などは公表された場合は更新": "個別事例の症状は公表されないので、重症などは公表された場合は更新"
+  "個別事例の症状は公表されないので、重症などは公表された場合は更新": "個別事例の症状は公表されないので、重症などは公表された場合は更新",
+  "発症日": "発症日",
+  "陽性確定日": "陽性確定日",
+  "発症日は陽性確定日からの相対日数": "発症日は陽性確定日からの相対日数"
 }
