--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -448,5 +448,6 @@
   "個別事例の症状は公表されないので、重症などは公表された場合は更新": "個別事例の症状は公表されないので、重症などは公表された場合は更新",
   "発症日": "発症日",
   "陽性確定日": "陽性確定日",
-  "発症日は陽性確定日からの相対日数": "発症日は陽性確定日からの相対日数"
+  "発症日は陽性確定日からの相対日数": "発症日は陽性確定日からの相対日数",
+  "退院等": "退院等"
 }
