--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -449,5 +449,9 @@
   "発症日": "発症日",
   "陽性確定日": "陽性確定日",
   "発症日は陽性確定日からの相対日数": "発症日は陽性確定日からの相対日数",
-  "退院等": "退院等"
+  "退院等": "退院等",
+  "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである": "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである",
+  "接触歴等不明者数(7日間移動平均)": "接触歴等不明者数(7日間移動平均)",
+  "公表時点での接触歴の有無であり、公表後の追加調査で判明する場合があるが、それは反映されていない": "公表時点での接触歴の有無であり、公表後の追加調査で判明する場合があるが、それは反映されていない",
+  "増加比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的": "増加比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的"
 }
