--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -453,5 +453,7 @@
   "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである": "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである",
   "接触歴等不明者数(7日間移動平均)": "接触歴等不明者数(7日間移動平均)",
   "公表時点での接触歴の有無であり、公表後の追加調査で判明する場合があるが、それは反映されていない": "公表時点での接触歴の有無であり、公表後の追加調査で判明する場合があるが、それは反映されていない",
-  "増加比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的": "増加比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的"
+  "増加比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的": "増加比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的",
+  "陽性者数/人口 は市町村の人口(令和2年10月1日現在)に対する陽性者数の割合": "陽性者数/人口 は市町村の人口(令和2年10月1日現在)に対する陽性者数の割合",
+  "陽性者数/人口": "陽性者数/人口"
 }
