--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -26,10 +26,8 @@
     "tested": "件",
     "reports": "件"
   },
-  "公表日": "公表日",
   "居住地": "居住地",
   "年代": "年代",
-  "性別": "性別",
   "{age}代": "{age}代",
   "10歳未満": "10歳未満",
   "退院※": "退院※",
@@ -167,8 +165,6 @@
   "主要駅の改札通過人数の推移（東京、新宿、渋谷、池袋ほか）[内閣官房HP]（ページ下部）": "主要駅の改札通過人数の推移（東京、新宿、渋谷、池袋ほか）[内閣官房HP]（ページ下部）",
   "電話のおかけ間違いが多くなっております。発信の際は今一度電話番号をお確かめの上、お間違えのないようお願いいたします。": "電話のおかけ間違いが多くなっております。発信の際は今一度電話番号をお確かめの上、お間違えのないようお願いいたします。",
   "100歳以上": "100歳以上",
-  "※退院は、保健所から報告があり、確認ができているものを反映": "※退院は、保健所から報告があり、確認ができているものを反映",
-  "※死亡退院を含む": "※死亡退院を含む",
   "新型コロナウイルスの感染が判明した方へ": "新型コロナウイルスの感染が判明した方へ",
   "東京都における滞在人口の増減": "東京都における滞在人口の増減",
   "ご家庭でのマスク等の捨て方": "ご家庭でのマスク等の捨て方",
@@ -206,8 +202,6 @@
   "重症患者数": "重症患者数",
   "相談件数": "相談件数",
   "入院・療養等調整中": "入院・療養等調整中",
-  "軽症・中等症": "軽症・中等症",
-  "退院等（療養期間経過を含む）": "退院等（療養期間経過を含む）",
   "ロードマップについて": "ロードマップについて",
   "その他 参考指標": "その他 参考指標",
   "東京アラート発動中": "東京アラート発動中",
@@ -226,8 +220,6 @@
   "検体採取日を基準とする。ただし、一部検査結果判明日に基づくものを含む": "検体採取日を基準とする。ただし、一部検査結果判明日に基づくものを含む",
   "同一の対象者について複数の検体を検査する場合がある": "同一の対象者について複数の検体を検査する場合がある",
   "モニタリング項目": "モニタリング項目",
-  "保健所から発生届が提出された日別（報告日別）の新規陽性者について、接触歴等の不明者、判明者に区分したものである": "保健所から発生届が提出された日別（報告日別）の新規陽性者について、接触歴等の不明者、判明者に区分したものである",
-  "濃厚接触者など、患者の発生状況の内訳の公表を開始した3月27日から作成": "濃厚接触者など、患者の発生状況の内訳の公表を開始した3月27日から作成",
   "増加比": "増加比",
   "接触歴等不明者数（７日間移動平均）": "接触歴等不明者数（７日間移動平均）",
   "検査人数": "検査人数",
@@ -265,8 +257,6 @@
   "感染状況・医療提供体制の分析": "感染状況・医療提供体制の分析",
   "入院患者数のうち、人工呼吸器管理（ECMOを含む）が必要な患者数を計上": "入院患者数のうち、人工呼吸器管理（ECMOを含む）が必要な患者数を計上",
   "届出保健所別の内訳": "届出保健所別の内訳",
-  "退院者数の把握には一定の期間を要しており、確認次第数値を更新している": "退院者数の把握には一定の期間を要しており、確認次第数値を更新している",
-  "「重症」は、人工呼吸器管理（ECMOを含む）が必要な患者数を計上": "「重症」は、人工呼吸器管理（ECMOを含む）が必要な患者数を計上",
   "東京都ステッカー申請・感染拡大防止協力金相談センター": "東京都ステッカー申請・感染拡大防止協力金相談センター",
   "感染防止徹底宣言ステッカー、感染拡大防止協力金等に関すること": "感染防止徹底宣言ステッカー、感染拡大防止協力金等に関すること",
   "データについて": "データについて",
@@ -330,8 +320,6 @@
   "前日までに報告された陽性者数の累計値": "前日までに報告された陽性者数の累計値",
   "陽性者の属性": "陽性者の属性",
   "{number}：急病やけがの際に、緊急受診の必要性や診察可能な医療機関をアドバイスする電話相談窓口": "{number}：急病やけがの際に、緊急受診の必要性や診察可能な医療機関をアドバイスする電話相談窓口",
-  "新規陽性者における接触歴等不明者数(7日間移動平均)": "新規陽性者における接触歴等不明者数(7日間移動平均)",
-  "増加比は、接触歴等不明者数(7日間移動平均)の前日と今日の比較": "増加比は、接触歴等不明者数(7日間移動平均)の前日と今日の比較",
   "盛岡市": "盛岡市",
   "宮古市": "宮古市",
   "大船渡市": "大船渡市",
@@ -443,8 +431,6 @@
   "相談する医療機関に迷う場合や「かかりつけ医」がない場合「受診・相談センター」": "相談する医療機関に迷う場合や「かかりつけ医」がない場合「受診・相談センター」",
   "または、かかりつけ医の紹介先で受診・検査となります": "または、かかりつけ医の紹介先で受診・検査となります",
   "かかりつけ医にて受診・検査をおこないます（診療・検査医療機関の場合）": "かかりつけ医にて受診・検査をおこないます（診療・検査医療機関の場合）",
-  "入院と宿泊療養の患者数": "入院と宿泊療養の患者数",
-  "個別事例の症状などは公表されないので、重症などは公表された場合は更新": "個別事例の症状などは公表されないので、重症などは公表された場合は更新",
   "個別事例の症状は公表されないので、重症などは公表された場合は更新": "個別事例の症状は公表されないので、重症などは公表された場合は更新",
   "発症日": "発症日",
   "陽性確定日": "陽性確定日",
@@ -455,5 +441,6 @@
   "公表時点での接触歴の有無であり、公表後の追加調査で判明する場合があるが、それは反映されていない": "公表時点での接触歴の有無であり、公表後の追加調査で判明する場合があるが、それは反映されていない",
   "増加比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的": "増加比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的",
   "陽性者数/人口 は市町村の人口(令和2年10月1日現在)に対する陽性者数の割合": "陽性者数/人口 は市町村の人口(令和2年10月1日現在)に対する陽性者数の割合",
-  "陽性者数/人口": "陽性者数/人口"
+  "陽性者数/人口": "陽性者数/人口",
+  "入院と宿泊療養の推移": "入院と宿泊療養の推移"
 }
