本日のデータに居住地の詳細が非公表なので「居住地：県内」があった

--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -442,5 +442,6 @@
   "増加比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的": "増加比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的",
   "陽性者数/人口 は市町村の人口(令和2年10月1日現在)に対する陽性者数の割合": "陽性者数/人口 は市町村の人口(令和2年10月1日現在)に対する陽性者数の割合",
   "陽性者数/人口": "陽性者数/人口",
-  "入院と宿泊療養の推移": "入院と宿泊療養の推移"
+  "入院と宿泊療養の推移": "入院と宿泊療養の推移",
+  "県内": "県内"
 }
