--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -440,5 +440,6 @@
   "陽性者数/人口 は市町村の人口(令和2年10月1日現在)に対する陽性者数の割合": "陽性者数/人口 は市町村の人口(令和2年10月1日現在)に対する陽性者数の割合",
   "陽性者数/人口": "陽性者数/人口",
   "入院と宿泊療養の推移": "入院と宿泊療養の推移",
-  "県内": "県内"
+  "県内": "県内",
+  "非公表": "非公表"
 }
