--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -441,5 +441,9 @@
   "陽性者数/人口": "陽性者数/人口",
   "入院と宿泊療養の推移": "入院と宿泊療養の推移",
   "県内": "県内",
-  "非公表": "非公表"
+  "非公表": "非公表",
+  "当サイトに掲載されている情報の正確性については万全を期していますが、利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。": "当サイトに掲載されている情報の正確性については万全を期していますが、利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。",
+  "前日までに報告された陽性者の居住地を元にした累計値": "前日までに報告された陽性者の居住地を元にした累計値",
+  "例えば、県外や他地域在住であるが、盛岡市の検査で陽性になった場合、盛岡市として集計される場合がある": "例えば、県外や他地域在住であるが、盛岡市の検査で陽性になった場合、盛岡市として集計される場合がある",
+  "意向により居住地が公表されない場合は累計に含まれない": "意向により居住地が公表されない場合は累計に含まれない"
 }
