--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -447,5 +447,6 @@
   "例えば、県外や他地域在住であるが、盛岡市の検査で陽性になった場合、盛岡市として集計される場合がある": "例えば、県外や他地域在住であるが、盛岡市の検査で陽性になった場合、盛岡市として集計される場合がある",
   "意向により居住地が公表されない場合は累計に含まれない": "意向により居住地が公表されない場合は累計に含まれない",
   "📺": "📺",
-  "公表日": "公表日"
+  "公表日": "公表日",
+  "確定日": "確定日"
 }
