--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -100,12 +100,8 @@
   "print": "印刷",
   "サイドメニュー項目を開く": "サイドメニュー項目を開く",
   "サイドメニュー項目を閉じる": "サイドメニュー項目を閉じる",
-  "お子様をお持ちの皆様へ": "お子様をお持ちの皆様へ",
-  "知事からのメッセージ": "知事からのメッセージ",
-  "このサイトの内容物は": "このサイトの内容物は",
   "クリエイティブ・コモンズ 表示 4.0 ライセンス": "クリエイティブ・コモンズ 表示 4.0 ライセンス",
   "https://creativecommons.org/licenses/by/4.0/deed.ja": "https://creativecommons.org/licenses/by/4.0/deed.ja",
-  "の下に提供されています。": "の下に提供されています。",
   "実績値": "実績値",
   "累計値": "累計値",
   "前日比": "前日比",
@@ -123,30 +119,6 @@
   "https://marketingplatform.google.com/about/analytics/terms/jp/": "https://marketingplatform.google.com/about/analytics/terms/jp/",
   "https://policies.google.com/privacy?hl=ja": "https://policies.google.com/privacy?hl=ja",
   "https://support.google.com/analytics/answer/6004245?hl=ja": "https://support.google.com/analytics/answer/6004245?hl=ja",
-  "お問い合わせ先一覧": "お問い合わせ先一覧",
-  "お問い合わせ内容": "お問い合わせ内容",
-  "局名": "局名",
-  "電話番号": "電話番号",
-  "政策企画局": "政策企画局",
-  "新型コロナウイルス感染症対策本部会議に関すること": "新型コロナウイルス感染症対策本部会議に関すること",
-  "都庁来庁者データに関すること": "都庁来庁者データに関すること",
-  "総務局": "総務局",
-  "都公式ホームページに関すること": "都公式ホームページに関すること",
-  "都公式SNSアカウントに関すること": "都公式SNSアカウントに関すること",
-  "生活文化局": "生活文化局",
-  "中小企業支援、テレワークに関すること": "中小企業支援、テレワークに関すること",
-  "産業労働局": "産業労働局",
-  "資金繰りに関すること": "資金繰りに関すること",
-  "経営に関すること": "経営に関すること",
-  "労働関係に関すること": "労働関係に関すること",
-  "新型コロナウイルス感染症の予防・検査・医療に関すること": "新型コロナウイルス感染症の予防・検査・医療に関すること",
-  "都立学校に関すること": "都立学校に関すること",
-  "教育庁": "教育庁",
-  "スムーズビズに関すること": "スムーズビズに関すること",
-  "都市整備局": "都市整備局",
-  "都営交通に関すること": "都営交通に関すること",
-  "交通局": "交通局",
-  "（都営交通お客様センター）": "（都営交通お客様センター）",
   "検査実施人数": "検査実施人数",
   "健康安全研究センターによる実施分": "健康安全研究センターによる実施分",
   "（注）速報値として公開するものであり、後日確定データとして修正される場合あり": "（注）速報値として公開するものであり、後日確定データとして修正される場合あり",
@@ -164,9 +136,6 @@
   "主要駅の改札通過人数の推移（東京、新宿、渋谷、池袋ほか）[内閣官房HP]（ページ下部）": "主要駅の改札通過人数の推移（東京、新宿、渋谷、池袋ほか）[内閣官房HP]（ページ下部）",
   "電話のおかけ間違いが多くなっております。発信の際は今一度電話番号をお確かめの上、お間違えのないようお願いいたします。": "電話のおかけ間違いが多くなっております。発信の際は今一度電話番号をお確かめの上、お間違えのないようお願いいたします。",
   "100歳以上": "100歳以上",
-  "新型コロナウイルスの感染が判明した方へ": "新型コロナウイルスの感染が判明した方へ",
-  "東京都における滞在人口の増減": "東京都における滞在人口の増減",
-  "ご家庭でのマスク等の捨て方": "ご家庭でのマスク等の捨て方",
   "自宅で安静に過ごし、必要に応じて医療機関を受診してください": "自宅で安静に過ごし、必要に応じて医療機関を受診してください",
   "Opera 最新版": "Opera 最新版",
   "強い症状": "強い症状",
@@ -180,13 +149,6 @@
   "発熱や咳などの{minorSymptom}がある": "発熱や咳などの{minorSymptom}がある",
   "日別値": "日別値",
   "陽性率": "陽性率",
-  "午前9時00分から午後10時00分（土日祝含む）": "午前9時00分から午後10時00分（土日祝含む）",
-  "ご家庭でのマスク等の捨て方に関すること": "ご家庭でのマスク等の捨て方に関すること",
-  "新型コロナコールセンター": "新型コロナコールセンター",
-  "午前9時00分から午後7時00分（土日祝含む）": "午前9時00分から午後7時00分（土日祝含む）",
-  "本サイトの管理・運営に関すること": "本サイトの管理・運営に関すること",
-  "環境局": "環境局",
-  "`電話のおかけ間違いが多くなっております。発信の際は今一度電話番号をお確かめの上、お間違えのないようお願いいたします。": "`電話のおかけ間違いが多くなっております。発信の際は今一度電話番号をお確かめの上、お間違えのないようお願いいたします。",
   "入院": "入院",
   "自宅療養": "自宅療養",
   "宿泊療養": "宿泊療養",
@@ -201,7 +163,6 @@
   "重症患者数": "重症患者数",
   "相談件数": "相談件数",
   "入院・療養等調整中": "入院・療養等調整中",
-  "ロードマップについて": "ロードマップについて",
   "その他 参考指標": "その他 参考指標",
   "東京アラート発動中": "東京アラート発動中",
   "東京アラート": "東京アラート",
@@ -256,8 +217,6 @@
   "感染状況・医療提供体制の分析": "感染状況・医療提供体制の分析",
   "入院患者数のうち、人工呼吸器管理（ECMOを含む）が必要な患者数を計上": "入院患者数のうち、人工呼吸器管理（ECMOを含む）が必要な患者数を計上",
   "届出保健所別の内訳": "届出保健所別の内訳",
-  "東京都ステッカー申請・感染拡大防止協力金相談センター": "東京都ステッカー申請・感染拡大防止協力金相談センター",
-  "感染防止徹底宣言ステッカー、感染拡大防止協力金等に関すること": "感染防止徹底宣言ステッカー、感染拡大防止協力金等に関すること",
   "データについて": "データについて",
   "新型コロナウイルス感染症対策本部": "新型コロナウイルス感染症対策本部",
   "業種ごとの感染拡大予防ガイドライン": "業種ごとの感染拡大予防ガイドライン",
@@ -286,7 +245,6 @@
   "県内発生": "県内発生",
   "通番": "通番",
   "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値をもとに算出し、折れ線グラフで示す（例えば、8月7日の陽性率は、8月1日から8月7日までの実績平均を用いて算出）": "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値をもとに算出し、折れ線グラフで示す（例えば、8月7日の陽性率は、8月1日から8月7日までの実績平均を用いて算出）",
-  "岩手県公式ホームページ": "岩手県公式ホームページ",
   "県民の皆様へ": "県民の皆様へ",
   "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、岩手県内の有志が開設したものです。": "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、岩手県内の有志が開設したものです。",
   "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値を折れ線グラフで示す（例えば、8月7日の移動平均値は、8月1日から8月7日までの実績値を平均したもの）": "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値を折れ線グラフで示す（例えば、8月7日の移動平均値は、8月1日から8月7日までの実績値を平均したもの）",
@@ -297,9 +255,7 @@
   "岩手県及び国の新型コロナウイルス感染症に関する支援策の情報をまとめています。": "岩手県及び国の新型コロナウイルス感染症に関する支援策の情報をまとめています。",
   "窓口を開設した2020年1月21日からのデータを表示": "窓口を開設した2020年1月21日からのデータを表示",
   "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ": "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ",
-  "イベントカレンダー": "イベントカレンダー",
   "検査件数（７日間移動平均）": "検査件数（７日間移動平均）",
-  "当サイトに掲載されている情報の正確性については万全を期していますが、岩手県は利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。": "当サイトに掲載されている情報の正確性については万全を期していますが、岩手県は利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。",
   "抗原検査件数": "抗原検査件数",
   "詳細を見る（岩手県新型コロナウイルス感染症関連情報）": "詳細を見る（岩手県新型コロナウイルス感染症関連情報）",
   "検査実施件数": "検査実施件数",
@@ -314,7 +270,6 @@
   "報告日別による陽性者数の推移": "報告日別による陽性者数の推移",
   "発症日別による陽性者数の推移はこちら": "発症日別による陽性者数の推移はこちら",
   "各保健所から報告があった患者の発生情報を、検査により陽性であることを医師が確認した日別（確定日別）に整理したものである": "各保健所から報告があった患者の発生情報を、検査により陽性であることを医師が確認した日別（確定日別）に整理したものである",
-  "前日までに報告された陽性者数の累計値": "前日までに報告された陽性者数の累計値",
   "陽性者の属性": "陽性者の属性",
   "{number}：急病やけがの際に、緊急受診の必要性や診察可能な医療機関をアドバイスする電話相談窓口": "{number}：急病やけがの際に、緊急受診の必要性や診察可能な医療機関をアドバイスする電話相談窓口",
   "盛岡市": "盛岡市",
@@ -430,7 +385,6 @@
   "かかりつけ医にて受診・検査をおこないます（診療・検査医療機関の場合）": "かかりつけ医にて受診・検査をおこないます（診療・検査医療機関の場合）",
   "個別事例の症状は公表されないので、重症などは公表された場合は更新": "個別事例の症状は公表されないので、重症などは公表された場合は更新",
   "発症日": "発症日",
-  "陽性確定日": "陽性確定日",
   "発症日は陽性確定日からの相対日数": "発症日は陽性確定日からの相対日数",
   "退院等": "退院等",
   "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである": "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである",
@@ -441,12 +395,11 @@
   "陽性者数/人口": "陽性者数/人口",
   "入院と宿泊療養の推移": "入院と宿泊療養の推移",
   "県内": "県内",
-  "非公表": "非公表",
   "当サイトに掲載されている情報の正確性については万全を期していますが、利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。": "当サイトに掲載されている情報の正確性については万全を期していますが、利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。",
   "前日までに報告された陽性者の居住地を元にした累計値": "前日までに報告された陽性者の居住地を元にした累計値",
   "例えば、県外や他地域在住であるが、盛岡市の検査で陽性になった場合、盛岡市として集計される場合がある": "例えば、県外や他地域在住であるが、盛岡市の検査で陽性になった場合、盛岡市として集計される場合がある",
   "意向により居住地が公表されない場合は累計に含まれない": "意向により居住地が公表されない場合は累計に含まれない",
   "📺": "📺",
-  "公表日": "公表日",
-  "確定日": "確定日"
+  "確定日": "確定日",
+  "このサイトの内容物は{creativeCommons}の下に提供されています。": "このサイトの内容物は{creativeCommons}の下に提供されています。"
 }
