--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -401,5 +401,7 @@
   "意向により居住地が公表されない場合は累計に含まれない": "意向により居住地が公表されない場合は累計に含まれない",
   "📺": "📺",
   "確定日": "確定日",
-  "このサイトの内容物は{creativeCommons}の下に提供されています。": "このサイトの内容物は{creativeCommons}の下に提供されています。"
+  "このサイトの内容物は{creativeCommons}の下に提供されています。": "このサイトの内容物は{creativeCommons}の下に提供されています。",
+  "前週比": "前週比",
+  "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的": "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的"
 }
