HospitalizedNumberCard の en.json を整備

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -63,7 +63,7 @@
   "死亡": "Passed away",
   "日別": "By day",
   "累計": "Cumulative",
-  "{date} 更新": "{date} 更新",
+  "{date} 更新": "Last update: {date}",
   "情報をシェアする": "Share",
   "埋め込み用コード": " Embed Code",
   "埋め込み用コードをコピーしました": " Copied the embeded code",
@@ -254,37 +254,35 @@
   "くのへむら": "くのへむら",
   "ひろのちょう": "ひろのちょう",
   "いちのへまち": "いちのへまち",
-  "フェーズ": "フェーズ",
+  "フェーズ": "Phase ",
   "（参考）": "（Ref.）",
-  "宿泊療養部屋数": "宿泊療養部屋数",
+  "宿泊療養部屋数": "Receiving treatment rooms at lodging facilities",
   "病床等計": "Number of beds for patients",
-  "半数の感染症病床に患者を収容": "半数の感染症病床に患者を収容",
-  "軽中症": "Mild-moderate",
-  "まん延期": "まん延期",
-  "岩手県の病床確保計画": "岩手県の病床確保計画",
-  "発生初期": "発生初期",
+  "半数の感染症病床に患者を収容": "Half of the infectious disease beds are occupied by patients.",
+  "軽中症": "Mild-moderate ",
+  "まん延期": "Spread stage",
+  "岩手県の病床確保計画": "Iwate Prefecture's plan to secure hospital beds",
+  "発生初期": "Early stage of outbreak",
   "厚生労働省 / 医療機関での医療提供体制について （別紙３）[PDF]": "厚生労働省 / 医療機関での医療提供体制について （別紙３）[PDF]",
-  "発生拡大期": "発生拡大期",
+  "発生拡大期": "Expanded stage",
   "岩手県の場合、": "岩手県の場合、",
-  "未発生期": "未発生期",
-  "岩手県 / 第17回本部員会議資料【資料2】[PDF]": "岩手県 / 第17回本部員会議資料【資料2】[PDF]",
-  "床": "床",
-  "重点医療機関等の病床の利用が進んだ": "重点医療機関等の病床の利用が進んだ",
-  "室": "室",
-  "一部の医療機関の感染症病床が満床": "一部の医療機関の感染症病床が満床",
-  "全ての医療機関の感染症病床が満床": "全ての医療機関の感染症病床が満床",
+  "未発生期": "Non-outbreak stage",
+  "岩手県 / 第17回本部員会議資料【資料2】[PDF]": "Iwate Prefecture's 17th HQ Members Meeting Document. [2] [JA/PDF]",
+  "重点医療機関等の病床の利用が進んだ": "Utilization of beds in priority medical institutions increased.",
+  "一部の医療機関の感染症病床が満床": "Infectious disease beds in some medical institutions are full.",
+  "全ての医療機関の感染症病床が満床": "Infectious disease beds in all medical institutions are full.",
   "（外出自粛要請、営業自粛要請、学校の休校等）をおこない、その20日後に入院患者数のピークが266人となり、計画している病床数 (フェーズ3にて軽中症305床) に収まるという「新たな流行シナリオ」に基づいて医療提供体制等を整備している": "（外出自粛要請、営業自粛要請、学校の休校等）をおこない、その20日後に入院患者数のピークが266人となり、計画している病床数 (フェーズ3にて軽中症305床) に収まるという「新たな流行シナリオ」に基づいて医療提供体制等を整備している",
-  "すべての医療機関の感染症病床が利用できる": "すべての医療機関の感染症病床が利用できる",
-  "感染症病床に余裕がある": "感染症病床に余裕がある",
+  "すべての医療機関の感染症病床が利用できる": "Infectious disease beds are available in all medical institutions.",
+  "感染症病床に余裕がある": "Infectious disease beds are almost available in all medical institutions.",
   "岩手の最新感染動向": "Updates on COVID-19 in Iwate",
   "陽性者数が4.4人/日 (31人/週) (実効再生産数 R1.7) の状態が 3日間 続いたら、社会への協力要請": "陽性者数が4.4人/日 (31人/週) (実効再生産数 R1.7) の状態が 3日間 続いたら、社会への協力要請",
   "PCR検査の7日間移動平均": "Number of PCR tests (a 7-day moving average)",
   "新規陽性者数の7日間移動平均": "Number of new test positives (a 7-day moving average)",
   "感染ピーク時の1日あたりの検査件数は、陽性率 10.4% と想定すると、実効再生産数 R1.7 の場合は 444 件、実効再生産数 R2.0 の場合は 829件 として検査態勢を整備している。": "感染ピーク時の1日あたりの検査件数は、陽性率 10.4% と想定すると、実効再生産数 R1.7 の場合は 444 件、実効再生産数 R2.0 の場合は 829件 として検査態勢を整備している。",
-  "岩手県 / 第19回本部員会議資料【資料4-1】[PDF]": "岩手県 / 第19回本部員会議資料【資料4-1】[PDF]",
+  "岩手県 / 第19回本部員会議資料【資料4-1】[PDF]": "Iwate Prefecture's 19th HQ Members Meeting Document. [4-1] [JA/PDF]",
   "岩手県の1日あたりの検査可能件数は864件": "岩手県の1日あたりの検査可能件数は864件",
   "件・PCR検査が": "件・PCR検査が",
-  "岩手のCOVID-19が気になる有志": "岩手のCOVID-19が気になる有志",
+  "岩手のCOVID-19が気になる有志": "Volunteers who are interested in COVID-19 in Iwate",
   "人です。": "人です。",
   "{date}": "{date}",
   "件・現在の入院患者は": "件・現在の入院患者は",
@@ -308,7 +306,7 @@
   "公表時点での接触歴の有無であり、公表後の追加調査で判明する場合があるが、それは反映されていない": "公表時点での接触歴の有無であり、公表後の追加調査で判明する場合があるが、それは反映されていない",
   "陽性者数/人口 は市町村の人口(令和2年10月1日現在)に対する陽性者数の割合": "陽性者数/人口 は市町村の人口(令和2年10月1日現在)に対する陽性者数の割合",
   "陽性者数/人口": "Number of test positives/Population",
-  "入院と宿泊療養の推移": "入院と宿泊療養の推移",
+  "入院と宿泊療養の推移": "Changes in hospitalized and in lodging facilities patients",
   "県内": "Inside Iwate",
   "当サイトに掲載されている情報の正確性については万全を期していますが、利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。": "Although every effort has been made to ensure the accuracy of the information posted on this site, Anyone will not be responsible for any actions taken by users using the information on this site.",
   "前日までに報告された陽性者の居住地を元にした累計値": "前日までに報告された陽性者の居住地を元にした累計値",
@@ -318,5 +316,7 @@
   "確定日": "確定日",
   "このサイトの内容物は{creativeCommons}の下に提供されています。": "Content on This Site is Licensed Under a {creativeCommons}",
   "前週比": "Week-over-week change",
-  "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的": "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的"
+  "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的": "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的",
+  "指標": "Indexes",
+  "計": "Total"
 }
