--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -268,9 +268,7 @@
   "岩手県の場合、": "岩手県の場合、",
   "未発生期": "未発生期",
   "岩手県 / 第17回本部員会議資料【資料2】[PDF]": "岩手県 / 第17回本部員会議資料【資料2】[PDF]",
-  "床": "床",
   "重点医療機関等の病床の利用が進んだ": "重点医療機関等の病床の利用が進んだ",
-  "室": "室",
   "一部の医療機関の感染症病床が満床": "一部の医療機関の感染症病床が満床",
   "全ての医療機関の感染症病床が満床": "全ての医療機関の感染症病床が満床",
   "（外出自粛要請、営業自粛要請、学校の休校等）をおこない、その20日後に入院患者数のピークが266人となり、計画している病床数 (フェーズ3にて軽中症305床) に収まるという「新たな流行シナリオ」に基づいて医療提供体制等を整備している": "（外出自粛要請、営業自粛要請、学校の休校等）をおこない、その20日後に入院患者数のピークが266人となり、計画している病床数 (フェーズ3にて軽中症305床) に収まるという「新たな流行シナリオ」に基づいて医療提供体制等を整備している",
@@ -318,5 +316,7 @@
   "確定日": "確定日",
   "このサイトの内容物は{creativeCommons}の下に提供されています。": "このサイトの内容物は{creativeCommons}の下に提供されています。",
   "前週比": "前週比",
-  "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的": "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的"
+  "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的": "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的",
+  "指標": "指標",
+  "計": "計"
 }
