ConfirmedCasesAttributesCardのen.jsonを整える
- 通番はdata.jsonのidから生成する（data.jsonに通番を含む必要がなくなる）
- additionalDescription は ConfirmedCasesAttributesCard.notes[] から v-for で表示する
- 発症日の相対日時は $tc で Pluralization する

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -11,10 +11,6 @@
     "tested": "cases",
     "reports": "cases"
   },
-  "居住地": "Residence",
-  "年代": "Age",
-  "{age}代": " {age}'s",
-  "10歳未満": "Under 9 years old",
   "企業の皆様・はたらく皆様へ": "For all companies and those working in Tokyo",
   "当サイトについて": "About this site",
   "ブラウザ環境について": "About browser preferences",
@@ -103,10 +99,7 @@
   "Twitterで{title}のグラフをシェア": "Share the graph of {title} on Twitter",
   "facebookで{title}のグラフをシェア": "Share the graph of {title} on Facebook",
   "日付": "Date",
-  "不明": "Unknown",
-  "調査中": "Investigating",
   "{title}のグラフ": "Chart of {title}",
-  "100歳以上": "Over 100 years old",
   "Opera 最新版": "latest version of Opera",
   "強い症状": "Severe symptoms",
   "妊娠中の方、重症化しやすい方（高齢者、糖尿病、心不全、呼吸器疾患（COPD等）等の基礎疾患がある方や透析を受けている方、免疫抑制剤や抗がん剤等を用いている方）はすぐに、それ以外の方は症状が４日以上続いた場合は必ず、相談してください。": "If you are pregnant or at higher risk for serious illness (elderly, receiving dialysis, taking immunosuppressive or anti-cancer medication, or have an underlying medical condition such as diabetes, heart disease, or respiratory disease such as COPD), call immediately. For others, call after 4 days of continued symptoms.",
@@ -164,7 +157,6 @@
   "次の症状がある方": "次の症状がある方",
   "症状のある方": "症状のある方",
   "対策サイト非公式": "The Information website (Unofficial)",
-  "通番": "No",
   "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値をもとに算出し、折れ線グラフで示す（例えば、8月7日の陽性率は、8月1日から8月7日までの実績平均を用いて算出）": "The positive rate here is a 7-day moving average that evens out the day-to-day variation caused by mass infections and other factors, for the purpose of overall trend analysis with line graph(e.g. the positive rate of 7th Aug is calculated by the average during 1st to 7th Aug.) ",
   "県民の皆様へ": "県民の皆様へ",
   "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、岩手県内の有志が開設したものです。": "This website was opened by the volunteer in Iwate to provide the latest information of COVID-19.",
@@ -298,8 +290,25 @@
   "または、かかりつけ医の紹介先で受診・検査となります": "または、かかりつけ医の紹介先で受診・検査となります",
   "かかりつけ医にて受診・検査をおこないます（診療・検査医療機関の場合）": "かかりつけ医にて受診・検査をおこないます（診療・検査医療機関の場合）",
   "個別事例の症状は公表されないので、重症などは公表された場合は更新": "個別事例の症状は公表されないので、重症などは公表された場合は更新",
+  "通番": "Case Number",
+  "事例{tsuban}": "Case {tsuban}",
+  "確定日": "Confirmed date",
   "発症日": "Outbreak date",
-  "発症日は陽性確定日からの相対日数": "発症日は陽性確定日からの相対日数",
+  "居住地": "Area",
+  "年代": "Age",
+  "📺": "📺",
+  "無症状": "No symptoms",
+  "不明": "Unknown",
+  "調査中": "Investigating",
+  "day": "Zero-day|{d} day before|{d} days before",
+  "10歳未満": "< 10's",
+  "{age}代": " {age}'s",
+  "100歳以上": "Over 100 years old",
+  "ConfirmedCasesAttributesCard": {
+    "notes": [
+      "Outbreak date is the number of relative days to the confirmed date."
+    ]
+  },
   "退院等": "Discharged,etc.",
   "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである": "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである",
   "接触歴等不明者数(7日間移動平均)": "Number of test positives with an unknown route of infection (7-day moving average)",
@@ -312,8 +321,6 @@
   "前日までに報告された陽性者の居住地を元にした累計値": "前日までに報告された陽性者の居住地を元にした累計値",
   "例えば、県外や他地域在住であるが、盛岡市の検査で陽性になった場合、盛岡市として集計される場合がある": "例えば、県外や他地域在住であるが、盛岡市の検査で陽性になった場合、盛岡市として集計される場合がある",
   "意向により居住地が公表されない場合は累計に含まれない": "意向により居住地が公表されない場合は累計に含まれない",
-  "📺": "📺",
-  "確定日": "確定日",
   "このサイトの内容物は{creativeCommons}の下に提供されています。": "Content on This Site is Licensed Under a {creativeCommons}",
   "前週比": "Week-over-week change",
   "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的": "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的",
