--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -11,10 +11,6 @@
     "tested": "件",
     "reports": "件"
   },
-  "居住地": "居住地",
-  "年代": "年代",
-  "{age}代": "{age}代",
-  "10歳未満": "10歳未満",
   "企業の皆様・はたらく皆様へ": "企業の皆様・はたらく皆様へ",
   "当サイトについて": "当サイトについて",
   "ブラウザ環境について": "ブラウザ環境について",
@@ -103,10 +99,7 @@
   "Twitterで{title}のグラフをシェア": "Twitterで{title}のグラフをシェア",
   "facebookで{title}のグラフをシェア": "facebookで{title}のグラフをシェア",
   "日付": "日付",
-  "不明": "不明",
-  "調査中": "調査中",
   "{title}のグラフ": "{title}のグラフ",
-  "100歳以上": "100歳以上",
   "Opera 最新版": "Opera 最新版",
   "強い症状": "強い症状",
   "妊娠中の方、重症化しやすい方（高齢者、糖尿病、心不全、呼吸器疾患（COPD等）等の基礎疾患がある方や透析を受けている方、免疫抑制剤や抗がん剤等を用いている方）はすぐに、それ以外の方は症状が４日以上続いた場合は必ず、相談してください。": "妊娠中の方、重症化しやすい方（高齢者、糖尿病、心不全、呼吸器疾患（COPD等）等の基礎疾患がある方や透析を受けている方、免疫抑制剤や抗がん剤等を用いている方）はすぐに、それ以外の方は症状が４日以上続いた場合は必ず、相談してください。",
@@ -164,7 +157,6 @@
   "次の症状がある方": "次の症状がある方",
   "症状のある方": "症状のある方",
   "対策サイト非公式": "対策サイト非公式",
-  "通番": "通番",
   "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値をもとに算出し、折れ線グラフで示す（例えば、8月7日の陽性率は、8月1日から8月7日までの実績平均を用いて算出）": "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値をもとに算出し、折れ線グラフで示す（例えば、8月7日の陽性率は、8月1日から8月7日までの実績平均を用いて算出）",
   "県民の皆様へ": "県民の皆様へ",
   "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、岩手県内の有志が開設したものです。": "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、岩手県内の有志が開設したものです。",
@@ -298,8 +290,25 @@
   "または、かかりつけ医の紹介先で受診・検査となります": "または、かかりつけ医の紹介先で受診・検査となります",
   "かかりつけ医にて受診・検査をおこないます（診療・検査医療機関の場合）": "かかりつけ医にて受診・検査をおこないます（診療・検査医療機関の場合）",
   "個別事例の症状は公表されないので、重症などは公表された場合は更新": "個別事例の症状は公表されないので、重症などは公表された場合は更新",
+  "通番": "通番",
+  "事例{tsuban}": "事例{tsuban}",
+  "確定日": "確定日",
   "発症日": "発症日",
-  "発症日は陽性確定日からの相対日数": "発症日は陽性確定日からの相対日数",
+  "居住地": "居住地",
+  "年代": "年代",
+  "📺": "📺",
+  "無症状": "無症状",
+  "不明": "不明",
+  "調査中": "調査中",
+  "day": "{d}日前|{d}日前|{d}日前",
+  "10歳未満": "10歳未満",
+  "{age}代": "{age}代",
+  "100歳以上": "100歳以上",
+  "ConfirmedCasesAttributesCard": {
+    "notes": [
+      "発症日は陽性確定日からの相対日数"
+    ]
+  },
   "退院等": "退院等",
   "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである": "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである",
   "接触歴等不明者数(7日間移動平均)": "接触歴等不明者数(7日間移動平均)",
@@ -312,8 +321,6 @@
   "前日までに報告された陽性者の居住地を元にした累計値": "前日までに報告された陽性者の居住地を元にした累計値",
   "例えば、県外や他地域在住であるが、盛岡市の検査で陽性になった場合、盛岡市として集計される場合がある": "例えば、県外や他地域在住であるが、盛岡市の検査で陽性になった場合、盛岡市として集計される場合がある",
   "意向により居住地が公表されない場合は累計に含まれない": "意向により居住地が公表されない場合は累計に含まれない",
-  "📺": "📺",
-  "確定日": "確定日",
   "このサイトの内容物は{creativeCommons}の下に提供されています。": "このサイトの内容物は{creativeCommons}の下に提供されています。",
   "前週比": "前週比",
   "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的": "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的",
