--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -325,5 +325,7 @@
   "前週比": "Week-over-week change",
   "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的": "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的",
   "指標": "Indexes",
-  "計": "Total"
+  "計": "Total",
+  "床": " beds",
+  "室": " rooms"
 }
